--- a/test.ipynb
+++ b/test.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
        "4          NaN -1.000000                          [0.4, 1.2333333333332543]  "
       ]
      },
-     "execution_count": 74,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,6 +189,24 @@
     "\n",
     "# tp_data['test_state_chain'] = tp_data.state_chain.apply(lambda x: len(x))\n",
     "# tp_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "tp_data =[]\n",
+    "print(len(tp_data))"
    ]
   },
   {
