--- a/test.ipynb
+++ b/test.ipynb
@@ -1916,96 +1916,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>a</th>\n",
+       "      <th>b</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "['NFLX',\n",
-       " 'SBUX',\n",
-       " 'AVGO',\n",
-       " 'LIN',\n",
-       " 'C',\n",
-       " 'MA',\n",
-       " 'COST',\n",
-       " 'HD',\n",
-       " 'PEP',\n",
-       " 'INTC',\n",
-       " 'ADP',\n",
-       " 'AMGN',\n",
-       " 'JPM',\n",
-       " 'REGN',\n",
-       " 'ISRG',\n",
-       " 'ADBE',\n",
-       " 'LMT',\n",
-       " 'AMT',\n",
-       " 'EBAY',\n",
-       " 'MS',\n",
-       " 'CSCO',\n",
-       " 'NVDA',\n",
-       " 'CSX',\n",
-       " 'JNJ',\n",
-       " 'ORCL',\n",
-       " 'CHTR',\n",
-       " 'BIIB',\n",
-       " 'BAC',\n",
-       " 'LLY',\n",
-       " 'CMCSA',\n",
-       " 'TMO',\n",
-       " 'MDLZ',\n",
-       " 'BA',\n",
-       " 'PYPL',\n",
-       " 'ATVI',\n",
-       " 'PG',\n",
-       " 'T',\n",
-       " 'PM',\n",
-       " 'FB',\n",
-       " 'TSLA',\n",
-       " 'JP225',\n",
-       " 'MRK',\n",
-       " 'CVS',\n",
-       " 'AMD',\n",
-       " 'IBM',\n",
-       " 'MSFT',\n",
-       " 'AAPL',\n",
-       " 'INTU',\n",
-       " 'MMM',\n",
-       " 'EQIX',\n",
-       " 'MCD',\n",
-       " 'GILD',\n",
-       " 'PFE',\n",
-       " 'DE30',\n",
-       " 'AMZN',\n",
-       " 'ABT',\n",
-       " 'BMY',\n",
-       " 'MO',\n",
-       " 'ABBV',\n",
-       " 'BABA',\n",
-       " 'NKE',\n",
-       " 'F',\n",
-       " 'EA',\n",
-       " 'CME',\n",
-       " 'STOXX50',\n",
-       " 'GOOGL',\n",
-       " 'KO']"
+       "   a  b\n",
+       "0  1  2"
       ]
      },
-     "execution_count": 205,
+     "execution_count": 210,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import re\n",
+    "improt\n",
     "path = '/Users/tranthong/Desktop/stock-app/stock_data_M5/'\n",
     "list_stock = []\n",
     "for file_name in os.listdir(path):\n",
     "  list_stock.append(re.search(r\"(.+)\\_.+\" ,file_name).group(1))\n",
     "list_stock_new = list(dict.fromkeys(list_stock))\n",
-    "list_stock_new\n",
-    "for ticker in list_stock_new:\n",
-    "    "
+    "list_stock_new"
    ]
   },
   {
