--- a/test.ipynb
+++ b/test.ipynb
@@ -239,6 +239,201 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 371,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>ticker</th>\n",
+       "      <th>point</th>\n",
+       "      <th>spread</th>\n",
+       "      <th>deviation</th>\n",
+       "      <th>spread2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>AAPL</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5</td>\n",
+       "      <td>AMD</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>10</td>\n",
+       "      <td>5</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>8</td>\n",
+       "      <td>AMZN</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>12</td>\n",
+       "      <td>BAC</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>8</td>\n",
+       "      <td>5</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>13</td>\n",
+       "      <td>BA</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>24</td>\n",
+       "      <td>5</td>\n",
+       "      <td>46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>24</td>\n",
+       "      <td>DE30</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>39</td>\n",
+       "      <td>5</td>\n",
+       "      <td>36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>28</td>\n",
+       "      <td>FB</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>8</td>\n",
+       "      <td>5</td>\n",
+       "      <td>41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>38</td>\n",
+       "      <td>JP225</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>90</td>\n",
+       "      <td>5</td>\n",
+       "      <td>89</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>50</td>\n",
+       "      <td>MSFT</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>10</td>\n",
+       "      <td>5</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52</th>\n",
+       "      <td>52</td>\n",
+       "      <td>NFLX</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>24</td>\n",
+       "      <td>5</td>\n",
+       "      <td>81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>54</th>\n",
+       "      <td>54</td>\n",
+       "      <td>NVDA</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>11</td>\n",
+       "      <td>5</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60</th>\n",
+       "      <td>60</td>\n",
+       "      <td>PYPL</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>9</td>\n",
+       "      <td>5</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>63</th>\n",
+       "      <td>63</td>\n",
+       "      <td>STOXX50</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>397</td>\n",
+       "      <td>5</td>\n",
+       "      <td>387</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>65</th>\n",
+       "      <td>65</td>\n",
+       "      <td>TSLA</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>8</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Unnamed: 0   ticker  point  spread  deviation  spread2\n",
+       "0            0     AAPL   0.01       6          5        9\n",
+       "5            5      AMD   0.01      10          5       25\n",
+       "8            8     AMZN   0.01       4          5        6\n",
+       "12          12      BAC   0.01       8          5        9\n",
+       "13          13       BA   0.01      24          5       46\n",
+       "24          24     DE30   0.10      39          5       36\n",
+       "28          28       FB   0.01       8          5       41\n",
+       "38          38    JP225   0.10      90          5       89\n",
+       "50          50     MSFT   0.01      10          5       21\n",
+       "52          52     NFLX   0.01      24          5       81\n",
+       "54          54     NVDA   0.01      11          5       26\n",
+       "60          60     PYPL   0.01       9          5       16\n",
+       "63          63  STOXX50   0.01     397          5      387\n",
+       "65          65     TSLA   0.01       8          5        7"
+      ]
+     },
+     "execution_count": 371,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data1 = pd.read_csv('/Users/tranthong/Desktop/stock-app/spread.csv')\n",
+    "data2 = pd.read_csv('/Users/tranthong/Desktop/stock-app/spread2.csv')\n",
+    "data1['spread2'] = data1.ticker.apply(lambda x: data2.spread.loc[data2.ticker == x].iloc[0])\n",
+    "data1.loc[data1.spread != data1.spread2]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 259,
    "metadata": {},
    "outputs": [
